--- a/css/question.css
+++ b/css/question.css
@@ -82,3 +82,12 @@ main > .container {
    .best_memb {
        margin: 0 0 0 25px;
     }
+
+footer {
+    position: fixed; /* Фиксированное положение */
+    left: 0; bottom: 0; /* Левый нижний угол */
+    padding: 10px; /* Поля вокруг текста */
+    background: #39b54a; /* Цвет фона */
+    color: #fff; /* Цвет текста */
+    width: 100%; /* Ширина слоя */
+}
