--- a/css/questions.css
+++ b/css/questions.css
@@ -46,9 +46,17 @@ main > .container {
     margin: 48px;
    }
 
-   .item-list{
-      margin: 8px 0 0 0;   
-   }
+    .pagination {
+      margin: 12px 0 50px 0;
+      display: inline-block;
+    }
+
+    .pagination a {
+      color: black;
+      float: left;
+      padding: 8px 16px;
+      text-decoration: none;
+    }
 
    .right_part{
       margin: 80px 0px 0px 0px;
@@ -61,3 +69,12 @@ main > .container {
    .best_memb {
        margin: 0 0 0 25px;
     }
+
+footer {
+    position: fixed; /* Фиксированное положение */
+    left: 0; bottom: 0; /* Левый нижний угол */
+    padding: 10px; /* Поля вокруг текста */
+    background: #39b54a; /* Цвет фона */
+    color: #fff; /* Цвет текста */
+    width: 100%; /* Ширина слоя */
+}
